# auto-patcher

./: .gitignore  AutoPatcher.cbp  CMakeLists.txt  README.md  main.cpp  registry.cpp  registry.h
